--- a/address-book-frontend/src/app/pages/edit-address/edit-address.component.html
+++ b/address-book-frontend/src/app/pages/edit-address/edit-address.component.html
@@ -1,3 +1,12 @@
+
+<nav>
+  <ul>
+    <li><a routerLink="/addressbook/get">📖 Address Book</a></li>
+    <li><a routerLink="/addressbook/add">➕ Add New</a></li>
+    
+  </ul>
+</nav>
+
 <div class="container">
     <h2>Edit Address</h2>
   
